Fixed menu on smaller screens

--- a/_sass/_typography.scss
+++ b/_sass/_typography.scss
@@ -48,8 +48,8 @@ h6 {
 }
 
 h1 {
-	font-size: 6rem;
-	line-height: 80px;
+	font-size: 5rem;
+	line-height: 65px;
 	margin: 0 -10px 0 0;
 
 	@media (min-width: $mobile-break) {
